# dotamatches

./: .gitignore  LICENSE  README.md  dotamatches.cabal  stack.yaml
src/: Cmd.hs  HTMLParser.hs  Main.hs  Main2.hs  PrettyPrint.hs  Processor.hs  mainold.hs
src/Dotamatches/: Cmd.hs  HTMLParser.hs  PrettyPrint.hs
