name:                dotamatches
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dotamatches#readme
license:             BSD3
license-file:        LICENSE
author:              Chayanon Wichitrnithed
maintainer:          example@example.com
copyright:           2018 Chayanon Wichitrnithed
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:   Cmd,
                     PrettyPrint,
                     HTMLParser
  hs-source-dirs:    src
  build-depends:     optparse-applicative,
                     async >= 2.1.1.1,
                     http-client,
                     base >= 4.7 && < 5,
                     lens >= 4.15.1,
                     scalpel,
                     split,
                     taggy-lens,
                     tagsoup >= 0.14.1,
                     text,
                     optparse-applicative,
                     wreq,
                     SafeSemaphore,
                     ansi-wl-pprint,
                     MissingH


executable dotamatches
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N4
  other-modules:       Cmd,
                       PrettyPrint,
                       HTMLParser
  build-depends:       MissingH,
                       async >= 2.1.1.1,
                       http-client,
                       base >= 4.7 && < 5,
                       lens >= 4.15.1,
                       scalpel,
                       split,
                       taggy-lens,
                       tagsoup >= 0.14.1,
                       text,
                       optparse-applicative,
                       wreq,
                       SafeSemaphore,
                       ansi-wl-pprint
