name:                dotamatches
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dotamatches#readme
license:             BSD3
license-file:        LICENSE
author:              n626
category:            Terminal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:    src
  exposed-modules:   Dotamatches.Cmd,
                     Dotamatches.PrettyPrint,
                     Dotamatches.HTMLParser
  build-depends:     optparse-applicative,
                     async >= 2.1.1.1,
                     http-client,
                     base >= 4.7 && < 5,
                     lens >= 4.15.1,
                     scalpel,
                     split,
                     tagsoup >= 0.14.1,
                     text,
                     optparse-applicative,
                     wreq,
                     SafeSemaphore,
                     ansi-wl-pprint,
                     MissingH


executable dotamatches
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -eventlog -rtsopts -with-rtsopts=-N4 -l -Wall
  other-modules:       Dotamatches.Cmd,
                       Dotamatches.PrettyPrint,
                       Dotamatches.HTMLParser
  build-depends:       MissingH,
                       async >= 2.1.1.1,
                       http-client,
                       base >= 4.7 && < 5,
                       lens >= 4.15.1,
                       scalpel,
                       split,
                       tagsoup >= 0.14.1,
                       text,
                       optparse-applicative,
                       wreq,
                       SafeSemaphore,
                       ansi-wl-pprint
  default-language:    Haskell2010
